Fix wrong height of brand image on phone layout

--- a/2014/pyconkr/static/css/pyconkr.css
+++ b/2014/pyconkr/static/css/pyconkr.css
@@ -294,10 +294,6 @@ h1, h2, h3, h4, h5, h6, th {
 }
 
 @media (max-width: 992px) {
-    .navbar-brand img {
-        height: 40px;
-    }
-
     .navbar-nav>li>a {
         padding: 10px;
     }
